--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body style="margin: 0; padding: 0; overflow: hidden;">
     <canvas id="canvas"></canvas>
     <div class="controls">
-        <p>🎮 <strong>Controles:</strong> Mover con ⬅️ ➡️ | Ángulo con ⬆️ ⬇️ | Disparar con barra espaciadora (mantén presionado)</p>
-        <p>🎯 Ángulo actual: <span id="angleDisplay">45</span>°</p>
+        <p style="font-size: 12px;">🎮 <strong>Controles:</strong> Mover con ⬅️ ➡️ | Ángulo con ⬆️ ⬇️ | Disparar con barra espaciadora (mantén presionado) | Presiona "M" para desactivar la música</p>
+        <p style="font-size: 12px;">🎯 Ángulo actual: <span id="angleDisplay">45</span>°</p>
         <div id="powerBarContainer">
             <div id="powerBar"></div>
             <div id="powerMarker"></div>
