Enhanced controls, aimbot and drag

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body style="margin: 0; padding: 0; overflow: hidden;">
     <canvas id="canvas"></canvas>
     <div class="controls">
-        <p style="font-size: 12px;">🎮 <strong>Controles:</strong> Mover con ⬅️ ➡️ | Ángulo con ⬆️ ⬇️ | Disparar con barra espaciadora (mantén presionado) | Presiona "M" para desactivar la música</p>
-        <p style="font-size: 12px;">🎯 Ángulo actual: <span id="angleDisplay">45</span>°</p>
+    <button id="btnControles" class="controls-button">CONTROLES</button>
         <div id="powerBarContainer">
             <div id="powerBar"></div>
             <div id="powerMarker"></div>
